--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -21,8 +21,8 @@
     <!-- TODO #2: Complete the View Jobs By Category Table. -->
 
     <!--                <td></td> &lt;!&ndash; Feel free to remove or modify this element if necessary. &ndash;&gt;-->
-<!--    <td>-->
-<!--      <a th:href="@{/list/jobs?column=all}" th:text="${columns.all}">View All</a>-->
+    <td>
+      <a th:href="@{/list/jobs?column=all}" th:text="${columns.all}">View All</a>
 <!--    </td>-->
     <td th:each="category : ${tableChoices}">
       <ul>
